--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -36,11 +36,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/manage">Manage</a>
                     </li>
-
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup">Sign up</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+    
 
 
     {% block content %}
