--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,17 +38,23 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/signup">Sign up</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
-    
+
 
 
     {% block content %}
