--- a/core/templates/signup.html
+++ b/core/templates/signup.html
@@ -1,10 +1,43 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
+{% load static %}
 {% block content %}
-<h2>Register</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-</form>
-{% endblock %}
+
+<div class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-5">
+            <h1 class="text-center mb-4">Sign up</h1>
+            <div class="card">
+                <div class="card-body">
+                    <form method="POST" action="{% url 'signup' %}">
+                        {% csrf_token %}
+                        <div class="form-group mb-3">
+                            <label for="username">Username:</label>
+                            <input type="text" name="username" class="form-control" required autofocus>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="email">Email:</label>
+                            <input type="email" name="email" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="password1">Password:</label>
+                            <input type="password" name="password1" class="form-control" required>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="password2">Confirm Password:</label>
+                            <input type="password" name="password2" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary w-100">Sign up</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="text-center mt-4">
+                <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock content %}
