Added manage flashcards packs.

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="/practise">Practise</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/manage">Manage</a>
+                        <a class="nav-link" href="/manage_packs">Manage</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
