--- a/core/templates/manage_packs.html
+++ b/core/templates/manage_packs.html
@@ -5,13 +5,15 @@
 
 <div class="container py-5 d-flex justify-content-center flex-wrap">
     {% for pack in packs %}
-    <div class="card m-2" style="width: 18rem;">
-        <div class="card-body">
+    <div class="card m-2 position-relative" style="width: 18rem;">
+        <div class="card-body text-center">
             <h5 class="card-title">{{ pack.name }}</h5>
-            <a href="{% url 'manage_flashcards' pack.id %}" class="btn btn-primary">Manage Flashcards</a>
         </div>
+        <a href="{% url 'manage_flashcards' pack.id %}"
+            class="position-absolute top-0 start-0 w-100 h-100 invisible-link"></a>
     </div>
     {% endfor %}
+
     <div class="card m-2" style="width: 18rem; border: dashed 2px;">
         <div class="card-body d-flex justify-content-center align-items-center">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -19,6 +21,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- Modal -->
 <div class="modal fade" id="addPackModal" tabindex="-1" aria-labelledby="addPackModalLabel" aria-hidden="true">
