--- a/core/templates/manage_flashcards.html
+++ b/core/templates/manage_flashcards.html
@@ -3,32 +3,164 @@
 {% load static %}
 {% block content %}
 
-<div class="container py-5 d-flex justify-content-center">
-    <div class="col-lg-6">
-        <div class="bg-light p-5 rounded">
-            <h2 class="mb-4 text-center">Manage Flashcards for {{ pack.name }}</h2>
-            <form id="flashcard-form">
-                <h1>debug: {{flashcards}}</h1>
-                {% csrf_token %}
-                <input type="hidden" id="flashcard-id" value="{{ flashcards.0.id }}">
-                <div class="form-group mb-3">
-                    <label for="question">Question:</label>
-                    <input type="text" id="question" class="form-control" value="{{ flashcards.0.question }}" required>
-                </div>
-                <div class="form-group mb-3">
-                    <label for="answer">Answer:</label>
-                    <input type="text" id="answer" class="form-control" value="{{ flashcards.0.answer }}" required>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <button id="previous" class="btn btn-primary">Previous</button>
-                    <button id="next" class="btn btn-primary">Next</button>
-                </div>
-                <div class="d-flex justify-content-center mt-3">
-                    <button id="save" class="btn btn-success">Save</button>
-                </div>
-            </form>
+<h1 class="text-center" style="margin-top: 50px;">Edit "{{ pack.name }}" pack</h1>
+<div class="container py-5 d-flex justify-content-center flex-wrap">
+    {% for flashcard in flashcards %}
+    <div class="card m-2 position-relative" style="width: 18rem;">
+        <div class="card-body text-center">
+            <h5 class="card-title">{{ flashcard.question }}</h5>
+            {{ flashcard.answer }}
+        </div>
+        <a href="#" data-bs-toggle="modal" data-bs-target="#editFlashcardModal"
+            class="position-absolute top-0 start-0 w-100 h-100 invisible-link"></a>
+    </div>
+    {% endfor %}
+
+    <div class="card m-2" style="width: 18rem; border: dashed 2px;">
+        <div class="card-body d-flex justify-content-center align-items-center">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="#addFlashcardModal{{flashcard.id}}">+</button>
         </div>
     </div>
 </div>
 
+<!-- Edit flashcard Modal -->
+{% for flashcard in flashcards %}
+<div class="modal fade" id="editFlashcardModal" tabindex="-1" aria-labelledby="editFlashcardModalLabel{{flashcard.id}}"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editFlashcardModalLabel{{flashcard.id}}">Edit flashcard</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="editFlashcardForm{{flashcard.id}}">
+                    <div class="form-group">
+                        <label for="question{{flashcard.id}}" class="col-form-label">Question:</label>
+                        <textarea type="text" class="form-control"
+                            id="question{{flashcard.id}}">{{ flashcard.question }}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="answer{{flashcard.id}}" class="col-form-label">Answer:</label>
+                        <textarea class="form-control" id="answer{{flashcard.id}}">{{ flashcard.answer }}</textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" id="deleteFlashcardButton{{flashcard.id}}">Delete</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="editFlashcardButton{{flashcard.id}}">Save
+                    changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+{% endfor %}
+
+<!-- Modal -->
+<div class="modal fade" id="addFlashcardModal" tabindex="-1" aria-labelledby="addFlashcardModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addFlashcardModalLabel">Add new flashcard</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="addFlashcardForm">
+                    <div class="form-group">
+                        <label for="question-in-modal" class="col-form-label">Question:</label>
+                        <textarea type="text" class="form-control" id="question-in-modal"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="answer-in-modal" class="col-form-label">Answer:</label>
+                        <textarea class="form-control" id="answer-in-modal"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="createFlashcardButton">Create</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% block script %}
+<script>
+    document.getElementById('createFlashcardButton').addEventListener('click', function () {
+        const question = document.getElementById('question-in-modal').value;
+        const answer = document.getElementById('answer-in-modal').value;
+        console.log('dupa' + question)
+        fetch("{% url 'create_flashcard' pack.id %}", {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token }}',
+            },
+            body: JSON.stringify({
+                question: question,
+                answer: answer,
+            }),
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    location.reload();
+                } else {
+                    alert("Failed to create pack: " + data.error);
+                }
+            });
+    });
+</script>
+
+
+{% for flashcard in flashcards %}
+<script>
+    document.getElementById('editFlashcardButton{{flashcard.id}}').addEventListener('click', function () {
+        const question = document.getElementById('question{{flashcard.id}}').value;
+        const answer = document.getElementById('answer{{flashcard.id}}').value;
+
+        fetch("{% url 'edit_flashcard' flashcard.id %}", {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token }}',
+            },
+            body: JSON.stringify({
+                question: question,
+                answer: answer,
+            }),
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    location.reload();
+                } else {
+                    alert("Failed to edit flashcard: " + data.error);
+                }
+            });
+    });
+
+    document.getElementById('deleteFlashcardButton{{flashcard.id}}').addEventListener('click', function () {
+        fetch("{% url 'delete_flashcard' flashcard.id %}", {
+            method: 'DELETE',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token }}',
+            },
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    location.reload();
+                } else {
+                    alert("Failed to delete flashcard: " + data.error);
+                }
+            });
+    });
+</script>
+{% endfor %}
+{% endblock script %}
 {% endblock content %}
