--- a/core/templates/manage_flashcards.html
+++ b/core/templates/manage_flashcards.html
@@ -3,7 +3,7 @@
 {% load static %}
 {% block content %}
 
-<h1 class="text-center" style="margin-top: 50px;">Edit "{{ pack.name }}" pack</h1>
+<h1 class="text-center" style="margin-top: 50px;">Edit {{ pack.name }} flashcards</h1>
 <div class="container py-5 d-flex justify-content-center flex-wrap">
     {% for flashcard in flashcards %}
     <div class="card m-2 position-relative" style="width: 18rem;">
