--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -27,9 +27,9 @@
                             <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item"> Todo: add in future
                         <a class="nav-link" href="/dashboard">Dashboard</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/practise">Practise</a>
                     </li>
