--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Strona główna
+Main page
 {% endblock %}
 
 {% block content %}
-
+<h1 class="text-center" style="margin-top: 50px;">Description</h1>
+<div class="container py-5 d-flex justify-content-center flex-wrap">
+    <p>Simple CRUD application based on django. This application allows to create and manage packs of flashcards.</p>
+    <b>This project is stil under development.</b>
+</div>
 {% endblock %}
