--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/bootstrap.min.css' %}" />
     <script src="{% static 'core/js/bootstrap.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    {% block extra_css %}{% endblock %}
 </head>
 </head>
 
