--- a/core/templates/review.html
+++ b/core/templates/review.html
@@ -1,11 +1,72 @@
 {% extends "base.html" %}
 
 {% load static %}
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="{% static 'core/css/review-styles.css' %}" />
+{% endblock %}
+
 {% block content %}
 
-<h1 class="text-center" style="margin-top: 50px;">Select pack for learning</h1>
-<div class="container py-5 d-flex justify-content-center flex-wrap">
-    {% for pack in packs %}
-    {% endfor %}
+<h1 class="text-center" style="margin-top: 50px;">{{pack.name}}</h1>
+<div class="d-flex justify-content-center mb-3">
+
 </div>
+<div class="container py-5 d-flex justify-content-center flex-wrap" id="whole-flashcard">
+    <div class="card m-2 position-relative" style="width: 18rem;">
+        <div class="front">
+            <div class="card-body text-center">
+                <h5 class="card-title" id="flashcard-content-front"></h5>
+            </div>
+        </div>
+        <div class="back">
+            <div class="card-body text-center">
+                <h5 class="card-title" id="flashcard-content-back"></h5>
+            </div>
+        </div>
+        <a href="#" id="flashcard" class="position-absolute top-0 start-0 w-100 h-100 invisible-link"></a>
+    </div>
+</div>
+
+
+<div class="d-flex justify-content-center mb-3">
+    <button id="previous" class="btn btn-primary me-3" style="min-width: max(10vw, 10vh)">Previous</button>
+    <button id="next" class="btn btn-primary" style="min-width: max(10vw, 10vh)">Next</button>
+</div>
+
+{% block script %}
+<script>
+    var flashcard_number = 0;
+    var flashcards = JSON.parse('{{ flashcards | escapejs | safe }}');
+
+    // first time
+    document.getElementById('flashcard-content-front').innerText = flashcards[flashcard_number]["question"];
+    document.getElementById('flashcard-content-back').innerText = flashcards[flashcard_number]["answer"];
+
+    document.getElementById('flashcard').addEventListener('click', function (event) {
+        event.preventDefault();
+        document.querySelector('.card').classList.toggle('flipped');
+    });
+
+    document.getElementById('previous').addEventListener('click', function (event) {
+        if (flashcard_number > 0) {
+            flashcard_number--;
+        } else {
+            flashcard_number = flashcards.length - 1;
+        }
+        document.getElementById('flashcard-content-front').innerText = flashcards[flashcard_number]["question"];
+        document.getElementById('flashcard-content-back').innerText = flashcards[flashcard_number]["answer"];
+    });
+
+    document.getElementById('next').addEventListener('click', function (event) {
+        if (flashcard_number < flashcards.length - 1) {
+            flashcard_number++;
+        } else {
+            flashcard_number = 0;
+        }
+        document.getElementById('flashcard-content-front').innerText = flashcards[flashcard_number]["question"];
+        document.getElementById('flashcard-content-back').innerText = flashcards[flashcard_number]["answer"];
+    });
+
+</script>
+{% endblock script %}
 {% endblock %}
