--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -57,6 +57,19 @@
     </nav>
 
 
+    {% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show mt-3" role="alert">
+            {{ message }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+
+
 
     {% block content %}
     {% endblock content %}
