--- a/core/templates/signup.html
+++ b/core/templates/signup.html
@@ -13,19 +13,45 @@
                         {% csrf_token %}
                         <div class="form-group mb-3">
                             <label for="username">Username:</label>
-                            <input type="text" name="username" class="form-control" required autofocus>
+                            <input type="text" name="username"
+                                class="form-control {% if form.username.errors %}is-invalid{% endif %}"
+                                value="{{ form.username.value|default:'' }}" required autofocus>
+                            {% for error in form.username.errors %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                            {% endfor %}
                         </div>
                         <div class="form-group mb-3">
                             <label for="email">Email:</label>
-                            <input type="email" name="email" class="form-control" required>
+                            <input type="email" name="email"
+                                class="form-control {% if form.email.errors %}is-invalid{% endif %}"
+                                value="{{ form.email.value|default:'' }}" required>
+                            {% for error in form.email.errors %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                            {% endfor %}
                         </div>
                         <div class="form-group mb-3">
                             <label for="password1">Password:</label>
-                            <input type="password" name="password1" class="form-control" required>
+                            <input type="password" name="password1"
+                                class="form-control {% if form.password1.errors %}is-invalid{% endif %}" required>
+                            {% for error in form.password1.errors %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                            {% endfor %}
                         </div>
                         <div class="form-group mb-3">
                             <label for="password2">Confirm Password:</label>
-                            <input type="password" name="password2" class="form-control" required>
+                            <input type="password" name="password2"
+                                class="form-control {% if form.password2.errors %}is-invalid{% endif %}" required>
+                            {% for error in form.password2.errors %}
+                            <div class="invalid-feedback">
+                                {{ error }}
+                            </div>
+                            {% endfor %}
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary w-100">Sign up</button>
